@@ -5,12 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <fdk.version>1.0.104</fdk.version>
+        <fdk.version>1.0.92</fdk.version>
     </properties>
     <groupId>com.example.fn</groupId>
     <artifactId>hello</artifactId>
     <version>1.0.0</version>
-
+	 
+	
     <repositories>
         <repository>
             <id>fn-release-repo</id>
@@ -32,42 +33,46 @@
         </dependency>
         <dependency>
             <groupId>com.fnproject.fn</groupId>
-            <artifactId>testing-core</artifactId>
+            <artifactId>runtime</artifactId>
             <version>${fdk.version}</version>
-            <scope>test</scope>
+        </dependency>
+        <!--dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
         </dependency>
         <dependency>
-            <groupId>com.fnproject.fn</groupId>
-            <artifactId>testing-junit4</artifactId>
-            <version>${fdk.version}</version>
-            <scope>test</scope>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>2.3.0.1</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>1.1.1</version>
+        </dependency-->
     </dependencies>
 
     <build>
+        <finalName>function</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
+                <version>3.8.0</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                   <!--source>12</source>
+                   <target>12</target-->
+                   <release>13</release>
+                   <compilerArgs>--enable-preview</compilerArgs>
+                    <!--source>12</source>
+                    <target>12</target-->
                 </configuration>
-            </plugin>
-            <plugin>
-                 <groupId>org.apache.maven.plugins</groupId>
-                 <artifactId>maven-surefire-plugin</artifactId>
-                 <version>2.22.1</version>
-                 <configuration>
-                     <useSystemClassLoader>false</useSystemClassLoader>
-                 </configuration>
             </plugin>
         </plugins>
     </build>
